--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								  <div class="banner_agile-info">
 									  <h3>Windy & Sayed</h3>
 									  <p>WEDDING</p>
+									  <br>
 									   <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png" alt="wp"/></a> </div>
 								  </div>
 							</li>
@@ -88,6 +89,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								  <div class="banner_agile-info">
 									  <h3>01 Februari 2020</h3>
 									  <p>WEDDING</p>
+									  <br>
 									   <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png" alt="wp"/></a> </div>
 								  </div>
 							</li>
@@ -96,6 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							 <div class="banner_agile-info">
 								  <h3>Pena Hall Batam Centre</h3>
 								  <p>WEDDING</p>
+								  <br>
 								   <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png" alt="wp"/></a> </div>
 							  </div>
 							</li>
@@ -132,11 +135,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										  <h4>Sayed</h4>
 										  <br>
 										  <div style="padding: 30px;border:5px solid #FDC272;border-radius: 10px;font-size: 18px;">
-										  <p class="effect-moses" >Putra dari Bapak Zainal Arifin dan Ibu Nur Rosaddan Ibu Nur Rosada</p>
+										  <p class="effect-moses" >Putra dari Bapak Zainal Arifin dan Ibu Nur Ida Rosada</p>
 										   <div class="icons">
 													<ul>
 														<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-														<li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+														<li class="team-twitter"><a href="#"><i class="fa fa-instagram"></i></a></li>
 														<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 													</ul>
 												</div>
@@ -163,7 +166,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										  <div class="icons">
 													<ul>
 														<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-														<li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+														<li class="team-twitter"><a href="#"><i class="fa fa-instagram"></i></a></li>
 														<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 													</ul>
 												</div>
