--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										  <p class="effect-moses" >Putra dari Bapak Zainal Arifin dan Ibu Nur Ida Rosada</p>
 										   <div class="icons">
 													<ul>
-														<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-														<li class="team-twitter"><a href="#"><i class="fa fa-instagram"></i></a></li>
-														<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+														<li><a href="https://www.facebook.com/sayed.iqbal.969" target="_blank"><i class="fa fa-facebook"></i></a></li>
+														<li class="team-twitter"><a href="https://instagram.com/sayedmaulana?igshid=13m215g392vq" target="_blank""><i class="fa fa-instagram"></i></a></li>
+														<li><a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 													</ul>
 												</div>
 										   </div>
@@ -165,8 +165,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										  <p>Putri dari Bapak Teguh Widodo dan Ibu Tien Sulistiyani</p>
 										  <div class="icons">
 													<ul>
-														<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-														<li class="team-twitter"><a href="#"><i class="fa fa-instagram"></i></a></li>
+														<li><a href="https://www.facebook.com/profile.php?id=100000177520503" target="_blank"><i class="fa fa-facebook"></i></a></li>
+														<li class="team-twitter"><a href="https://www.instagram.com/windypsptsr/?igshid=sdrgzivkkbqb" target="_blank"><i class="fa fa-instagram"></i></a></li>
 														<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 													</ul>
 												</div>
