--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<figcaption>
 								<h4>Akad <br>Nikah</h4>
 								
-					   <p><i class="fa fa-clock-o" aria-hidden="true"></i>13.30 Wib - Selesai</p>
+					   <p><i class="fa fa-clock-o" aria-hidden="true"></i><br>13.30 Wib - Selesai</p>
 							</figcaption>			
 				</figure>
 
@@ -242,7 +242,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/p2.jpg" alt="" />
 							<figcaption>
 								<h4>Resepsi</h4>
-								<p><i class="fa fa-clock-o" aria-hidden="true"></i>15.30 - 20.30</p>
+								<p><i class="fa fa-clock-o" aria-hidden="true"></i><br>15.30 - 20.30</p>
 							</figcaption>			
 				</figure>
 	</div>
@@ -253,7 +253,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/p4.jpg" alt="" />
 							<figcaption>
 								<h4>Tanggal</h4>
-								<p><i class="fa fa-calendar-o" aria-hidden="true"></i>01 Februari 2020</p>
+								<p><i class="fa fa-calendar-o" aria-hidden="true"></i><br>01 Februari 2020</p>
 							</figcaption>			
 				</figure>
 
