--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<figcaption>
 								<h4>Akad Nikah <i class="fa fa-angle-double-right"></i></h4>
 								
-					   <p><i class="fa fa-clock-o" aria-hidden="true"></i>: 13.30 Wib<br><i class="fa fa-calendar-o" aria-hidden="true"></i> : 01 Februari 2020</p>
+					   <p><i class="fa fa-calendar-o" aria-hidden="true"></i> : 01 Februari 2020<br><i class="fa fa-clock-o" aria-hidden="true"></i>: 13.30 Wib</p>
 							</figcaption>			
 				</figure>
 
@@ -390,7 +390,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/p2.jpg" alt="" />
 							<figcaption>
 								<h4>Resepsi<br><i class="fa fa-angle-double-right"></i></h4>
-								<p><i class="fa fa-clock-o" aria-hidden="true"></i> 15.30 - 20.30<br><i class="fa fa-calendar-o" aria-hidden="true"></i> : 01 Februari 2020</p>
+								<p><i class="fa fa-calendar-o" aria-hidden="true"></i> : 01 Februari 2020<br><i class="fa fa-clock-o" aria-hidden="true"></i> 15.30 - 20.30</p>
 							</figcaption>			
 				</figure>
 	</div>
