--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-<title>Windy & Sayed Weeding</title>    
+<title>Windy & Sayed Wedding</title>    
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /><!-- fontawesome css -->     
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" /><!-- Bootstrap stylesheet -->
 <link href="css/snow.css" rel="stylesheet" type="text/css" media="all" /><!-- stylesheet -->
@@ -434,7 +434,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  <div class="snow background layered"></div>
 			</div>
   <div class="agile-w3l-sec">
-              <h3>I Hope You will come our wedding party</h3>
+              <h3>I Hope You will come to our wedding party</h3>
 			  <p>Sayed <span>&</span> Windy</p>
 			  <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <i class="fa fa-heart-o" aria-hidden="true"></i></a> </div>
   	</div>
