--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span id="hours" class="simply-amount"></span>
 						<small style="color: #fff;font-size: 15px;">HOURS  </small>	
 						<span id="minutes" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">MINUTES  </small>	
-						<span id="seconds" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">SEOCNDS</small>	
+						<span id="seconds" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">SECONDS</small>	
 					</p>
 							<div class="clearfix"></div>
 						</section>
