--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="snow background layered"></div>
 		</div>
 		<div class="agile-w3l-sec">
-			<h3>I Hope You will come to our wedding party</h3>
+			<h3>I hope you will come to our wedding party</h3>
 			<p>Sayed <span>&</span> Windy</p>
 			<div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <i class="fa fa-heart-o"
 						aria-hidden="true"></i></a> </div>
