--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<section class="examples">
 
 				<p class="countdown" ">
-						<span id=" days" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">DAYS </small>
+						<span id="days" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">DAYS </small>
 					<span id="hours" class="simply-amount"></span>
 					<small style="color: #fff;font-size: 15px;">HOURS </small>
 					<span id="minutes" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">MINUTES </small>
@@ -416,7 +416,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<iframe width="100" height="80" id="gmap_canvas"
 								src="https://maps.google.com/maps?q=graha%20pena&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
 								scrolling="no" marginheight="0" marginwidth="0"></iframe>
-							<caption><br><br>Graha Pena</caption>
+							<caption><br>Graha Pena</caption>
 						</p>
 					</figcaption>
 				</figure>
