--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h3>Windy & Sayed</h3>
 						<p>WEDDING</p>
 						<br>
-						<div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png"
-									alt="wp" /></a> </div>
+						<div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img
+									src="images/couple.png" alt="wp" /></a> </div>
 					</div>
 				</li>
 				<li>
@@ -97,8 +97,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h3>01 Februari 2020</h3>
 						<p>WEDDING</p>
 						<br>
-						<div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png"
-									alt="wp" /></a> </div>
+						<div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img
+									src="images/couple.png" alt="wp" /></a> </div>
 					</div>
 				</li>
 				<li>
@@ -107,8 +107,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h3>Pena Hall Batam Centre</h3>
 						<p>WEDDING</p>
 						<br>
-						<div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png"
-									alt="wp" /></a> </div>
+						<div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img
+									src="images/couple.png" alt="wp" /></a> </div>
 					</div>
 				</li>
 
@@ -146,7 +146,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<ul>
 								<li><a href="https://www.facebook.com/sayed.iqbal.969" target="_blank"><i
 											class="fa fa-facebook"></i></a></li>
-								<li class="team-twitter"><a href="https://instagram.com/sayedmaulana?igshid=13m215g392vq"
+								<li class="team-twitter"><a
+										href="https://instagram.com/sayedmaulana?igshid=13m215g392vq"
 										target="_blank""><i class=" fa fa-instagram"></i></a></li>
 								<li><a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 							</ul>
@@ -172,7 +173,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<ul>
 								<li><a href="https://www.facebook.com/profile.php?id=100000177520503" target="_blank"><i
 											class="fa fa-facebook"></i></a></li>
-								<li class="team-twitter"><a href="https://www.instagram.com/windypsptsr/?igshid=sdrgzivkkbqb"
+								<li class="team-twitter"><a
+										href="https://www.instagram.com/windypsptsr/?igshid=sdrgzivkkbqb"
 										target="_blank"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 							</ul>
@@ -348,11 +350,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<section class="examples">
 
 				<p class="countdown" ">
-						<span id="days" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">DAYS </small>
+						<span id=" days" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">DAYS </small>
 					<span id="hours" class="simply-amount"></span>
 					<small style="color: #fff;font-size: 15px;">HOURS </small>
-					<span id="minutes" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">MINUTES </small>
-					<span id="seconds" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">SECONDS</small>
+					<span id="minutes" class="simply-amount"></span><small style="color: #fff;font-size: 15px;">MINUTES
+					</small>
+					<span id="seconds" class="simply-amount"></span><small
+						style="color: #fff;font-size: 15px;">SECONDS</small>
 				</p>
 				<div class="clearfix"></div>
 			</section>
@@ -388,8 +392,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<figcaption>
 						<h4>Akad Nikah <i class="fa fa-angle-double-right"></i></h4>
 
-						<p><i class="fa fa-calendar-o" aria-hidden="true"></i> : 01 Februari 2020<br><i class="fa fa-clock-o"
-								aria-hidden="true"></i>: 13.30 Wib</p>
+						<p><i class="fa fa-calendar-o" aria-hidden="true"></i> : 01 Februari 2020<br><i
+								class="fa fa-clock-o" aria-hidden="true"></i>: 13.30 Wib</p>
 					</figcaption>
 				</figure>
 
@@ -399,8 +403,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/p2.jpg" alt="" />
 					<figcaption>
 						<h4>Resepsi<br><i class="fa fa-angle-double-right"></i></h4>
-						<p><i class="fa fa-calendar-o" aria-hidden="true"></i> : 01 Februari 2020<br><i class="fa fa-clock-o"
-								aria-hidden="true"></i> 15.30 - 20.30</p>
+						<p><i class="fa fa-calendar-o" aria-hidden="true"></i> : 01 Februari 2020<br><i
+								class="fa fa-clock-o" aria-hidden="true"></i> 15.30 - 20.30</p>
 					</figcaption>
 				</figure>
 			</div>
@@ -413,9 +417,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<figcaption>
 						<h4>Tempat<br><i class="fa fa-angle-double-right"></i></h4>
 						<p style="margin: 0px;">
-							<iframe width="100" height="80" id="gmap_canvas"
-								src="https://maps.google.com/maps?q=graha%20pena&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-								scrolling="no" marginheight="0" marginwidth="0"></iframe>
+							<iframe width="100" height="85" id="gmap_canvas"
+								src="https://maps.google.com/maps?q=graha%20pena&t=&z=13&ie=UTF8&iwloc=&output=embed"
+								frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 							<caption><br>Graha Pena</caption>
 						</p>
 					</figcaption>
